--- a/BanVeDiTourDuLich/Views/Home/Search.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Search.cshtml
@@ -1,8 +1,125 @@
 ﻿@model BanVeDiTourDuLich.ViewModels.SearchViewModel
 @{
     ViewBag.Title = "Search";
-    Layout = "~/Views/Shared/_MyLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="hero-wrap js-fullheight"
+     style="background-image: url('../../Content/images/bg_2.jpg')"
+     data-stellar-background-ratio="0.5">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center"
+             data-scrollax-parent="true">
+            <div class="col-md-9 text text-center ftco-animate"
+                 data-scrollax=" properties: { translateY: '70%' }">
+                <a href="https://vimeo.com/45830194"
+                   class="icon-video popup-vimeo d-flex align-items-center justify-content-center mb-4">
+                    <span class="ion-ios-play"></span>
+                </a>
+                <p class="caps"
+                   data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
+                    Đi tới bất cứ nơi đâu mà không phải lo nghĩ gì cả
+                </p>
+                <h1 data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
+                    Hãy cùng chúng tôi tạo ra những chuyến đi tuyệt vời
+                </h1>
+            </div>
+        </div>
+    </div>
+</div>
+
+<section class="ftco-section ftco-no-pb ftco-no-pt">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="search-wrap-1 ftco-animate p-4">
+                    <form action="/Home/Search" class="search-property-1" method="get">
+                        <div class="row">
+                            <div class="col-lg align-items-end">
+                                <div class="form-group">
+                                    <label for="#">Điểm đến</label>
+                                    <div class="form-field">
+                                        <div class="icon">
+                                            <span class="ion-ios-search"></span>
+                                        </div>
+                                        <input type="text" name="diemden"
+                                               class="form-control"
+                                               placeholder="Search place" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg align-items-end">
+                                <div class="form-group">
+                                    <label for="#">Ngày check-in</label>
+                                    <div class="form-field">
+                                        <div class="icon">
+                                            <span class="ion-ios-calendar"></span>
+                                        </div>
+                                        <input type="text"
+                                               class="form-control checkin_date"
+                                               placeholder="Check In Date" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg align-items-end">
+                                <div class="form-group">
+                                    <label for="#">Ngày check-out</label>
+                                    <div class="form-field">
+                                        <div class="icon">
+                                            <span class="ion-ios-calendar"></span>
+                                        </div>
+                                        <input type="text"
+                                               class="form-control checkout_date"
+                                               placeholder="Check Out Date" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg align-items-end">
+                                <div class="form-group">
+                                    <label for="#">Giá cao nhất</label>
+                                    <div class="form-field">
+                                        <div class="select-wrap">
+                                            <div class="icon">
+                                                <span class="ion-ios-arrow-down"></span>
+                                            </div>
+                                            <select name="" id="" class="form-control">
+                                                <option value="">$5,000</option>
+                                                <option value="">$10,000</option>
+                                                <option value="">$50,000</option>
+                                                <option value="">$100,000</option>
+                                                <option value="">$200,000</option>
+                                                <option value="">$300,000</option>
+                                                <option value="">$400,000</option>
+                                                <option value="">$500,000</option>
+                                                <option value="">$600,000</option>
+                                                <option value="">$700,000</option>
+                                                <option value="">$800,000</option>
+                                                <option value="">$900,000</option>
+                                                <option value="">$1,000,000</option>
+                                                <option value="">$2,000,000</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg align-self-end">
+                                <div class="form-group">
+                                    <div class="form-field">
+                                        <input type="submit" name="diemden"
+                                               value="Search"
+                                               class="form-control btn btn-primary" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 <section class="ftco-section ftco-no-pt">
     <div class="container">
         <div class="row justify-content-center pb-4">
@@ -15,7 +132,7 @@
             {
                 <div class="col-md-4 ftco-animate">
                     <div class="project-wrap">
-                        <a href="#"
+                        <a href="/Home/Destination/@destination.DiaDiem.MaDiaDiem"
                            class="img"
                            style="background-image: url(@destination.DiaDiem.DuongDanAnh)"></a>
                         <div class="text p-4">
