--- a/BanVeDiTourDuLich/Views/Home/Search.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Search.cshtml
@@ -55,25 +55,13 @@
                                         <div class="icon">
                                             <span class="ion-ios-calendar"></span>
                                         </div>
-                                        <input type="text"
+                                        <input type="date" name="ngaydi"
                                                class="form-control checkin_date"
                                                placeholder="Check In Date" />
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg align-items-end">
-                                <div class="form-group">
-                                    <label for="#">Ngày check-out</label>
-                                    <div class="form-field">
-                                        <div class="icon">
-                                            <span class="ion-ios-calendar"></span>
-                                        </div>
-                                        <input type="text"
-                                               class="form-control checkout_date"
-                                               placeholder="Check Out Date" />
-                                    </div>
-                                </div>
-                            </div>
+
                             <div class="col-lg align-items-end">
                                 <div class="form-group">
                                     <label for="#">Giá cao nhất</label>
@@ -82,22 +70,7 @@
                                             <div class="icon">
                                                 <span class="ion-ios-arrow-down"></span>
                                             </div>
-                                            <select name="" id="" class="form-control">
-                                                <option value="">$5,000</option>
-                                                <option value="">$10,000</option>
-                                                <option value="">$50,000</option>
-                                                <option value="">$100,000</option>
-                                                <option value="">$200,000</option>
-                                                <option value="">$300,000</option>
-                                                <option value="">$400,000</option>
-                                                <option value="">$500,000</option>
-                                                <option value="">$600,000</option>
-                                                <option value="">$700,000</option>
-                                                <option value="">$800,000</option>
-                                                <option value="">$900,000</option>
-                                                <option value="">$1,000,000</option>
-                                                <option value="">$2,000,000</option>
-                                            </select>
+                                            <input name="gia" id="" class="form-control" />
                                         </div>
                                     </div>
                                 </div>
@@ -105,7 +78,7 @@
                             <div class="col-lg align-self-end">
                                 <div class="form-group">
                                     <div class="form-field">
-                                        <input type="submit" name="diemden"
+                                        <input type="submit"
                                                value="Search"
                                                class="form-control btn btn-primary" />
                                     </div>
