--- a/BanVeDiTourDuLich/Views/Home/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Index.cshtml
@@ -243,7 +243,7 @@
             {
                 <div class="col-md-3 ftco-animate">
                     <div class="project-destination">
-                        <a href="/Home/Destination/@destination.DiaDiem.MaDiaDiem"
+                        <a href="/Home/Tour/@destination.DiaDiem.MaDiaDiem"
                            class="img"
                            style="background-image: url(@destination.DiaDiem.DuongDanAnh)">
                             <div class="text">
@@ -262,7 +262,7 @@
     <div class="container">
         <div class="row justify-content-center pb-4">
             <div class="col-md-12 heading-section text-center ftco-animate">
-                <h2 class="mb-4">Địa điểm đến</h2>
+                <h2 class="mb-4">Các tour du lịch ưa thích</h2>
             </div>
         </div>
         <div class="row">
