update form search

--- a/BanVeDiTourDuLich/Views/Home/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="search-wrap-1 ftco-animate p-4">
-                    <form action="/Home/Search" class="search-property-1" method="get">
+                    <form action="/Tour/TimKiemTour" class="search-property-1" method="get">
                         <div class="row">
                             <div class="col-lg align-items-end">
                                 <div class="form-group">
