--- a/BanVeDiTourDuLich/Views/Cart/Cart.cshtml
+++ b/BanVeDiTourDuLich/Views/Cart/Cart.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<BanVeDiTourDuLich.ViewModels.ThongTinHangTrongGio>
 @{
     ViewBag.Title = "Cart";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,67 +6,51 @@
 <main>
     <div class="basket">
         <div class="basket-module">
-            <label for="promo-code">Enter a promotional code</label>
+            <label for="promo-code">Nhập vào mã giảm giá</label>
             <input id="promo-code" type="text" name="promo-code" maxlength="5" class="promo-code-field">
-            <button class="promo-code-cta">Apply</button>
+            <button class="promo-code-cta">Áp dụng</button>
         </div>
         <div class="basket-labels">
             <ul>
-                <li class="item item-heading">Item</li>
-                <li class="price">Price</li>
-                <li class="quantity">Quantity</li>
-                <li class="subtotal">Subtotal</li>
+                <li class="item item-heading">Vật phẩm</li>
+                <li class="price">Giá tiền</li>
+                <li class="quantity">Số lượng</li>
+                <li class="subtotal">Tổng</li>
             </ul>
         </div>
-        <div class="basket-product">
-            <div class="item">
-                <div class="product-image">
-                    <img src="http://placehold.it/120x166" alt="Placholder Image 2" class="product-frame">
+        @foreach (var hang in @Model)
+        {
+            <div class="basket-product">
+                <div class="item">
+                    <div class="product-image">
+                        <img src="http://placehold.it/120x166" alt="Placholder Image 2" class="product-frame">
+                    </div>
+                    <div class="product-details">
+                        <h1><strong><span class="item-quantity">@hang.SoLuong</span> @hang.MaTour</strong> @hang.MaLoaiVe</h1>
+                        <p><strong>Navy, Size 18</strong></p>
+                        <p>Product Code - 232321939</p>
+                    </div>
                 </div>
-                <div class="product-details">
-                    <h1><strong><span class="item-quantity">4</span> x Eliza J</strong> Lace Sleeve Cuff Dress</h1>
-                    <p><strong>Navy, Size 18</strong></p>
-                    <p>Product Code - 232321939</p>
+                <div class="price">26.00</div>
+                <div class="quantity">
+                    <input type="number" value="4" min="1" class="quantity-field">
                 </div>
-            </div>
-            <div class="price">26.00</div>
-            <div class="quantity">
-                <input type="number" value="4" min="1" class="quantity-field">
-            </div>
-            <div class="subtotal">104.00</div>
-            <div class="remove">
-                <button>Remove</button>
-            </div>
-        </div>
-        <div class="basket-product">
-            <div class="item">
-                <div class="product-image">
-                    <img src="http://placehold.it/120x166" alt="Placholder Image 2" class="product-frame">
-                </div>
-                <div class="product-details">
-                    <h1><strong><span class="item-quantity">1</span> x Whistles</strong> Amella Lace Midi Dress</h1>
-                    <p><strong>Navy, Size 10</strong></p>
-                    <p>Product Code - 232321939</p>
+                <div class="subtotal">104.00</div>
+                <div class="remove">
+                    <button>Xóa</button>
                 </div>
             </div>
-            <div class="price">26.00</div>
-            <div class="quantity">
-                <input type="number" value="1" min="1" class="quantity-field">
-            </div>
-            <div class="subtotal">26.00</div>
-            <div class="remove">
-                <button>Remove</button>
-            </div>
-        </div>
+
+        }
     </div>
     <aside>
         <div class="summary">
-            <div class="summary-total-items"><span class="total-items"></span> Items in your Bag</div>
+            <div class="summary-total-items"><span class="total-items"></span> Đồ trong giỏ hàng</div>
             <div class="summary-subtotal">
-                <div class="subtotal-title">Subtotal</div>
+                <div class="subtotal-title">Tổng tiền</div>
                 <div class="subtotal-value final-value" id="basket-subtotal">130.00</div>
                 <div class="summary-promo hide">
-                    <div class="promo-title">Promotion</div>
+                    <div class="promo-title">Giảm giá</div>
                     <div class="promo-value final-value" id="basket-promo"></div>
                 </div>
             </div>
@@ -80,11 +64,11 @@
                 </select>
             </div>
             <div class="summary-total">
-                <div class="total-title">Total</div>
+                <div class="total-title">Tổng tiền thanh toán</div>
                 <div class="total-value final-value" id="basket-total">130.00</div>
             </div>
             <div class="summary-checkout">
-                <button class="checkout-cta">Go to Secure Checkout</button>
+                <button class="checkout-cta">Thanh toán</button>
             </div>
         </div>
     </aside>
