--- a/BanVeDiTourDuLich/Views/Home/Destination.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Destination.cshtml
@@ -103,19 +103,19 @@
             </div>
         </div>
         <div class="row">
-            @foreach (var destination in @Model.CacDiaDiem)
+            @foreach (var destination in @Model.CacTour)
             {
                 <div class="col-md-4 ftco-animate">
                     <div class="project-wrap">
                         <a href="#"
                            class="img"
-                           style="background-image: url(@destination.DiaDiem.DuongDanAnh)"></a>
+                           style="background-image: url(@destination.Tour.DuongDanAnh)"></a>
                         <div class="text p-4">
                             <span class="price">@destination.GiaTien/người</span>
                             <span class="days">Chuyến đi 1 ngày</span>
-                            <h3><a href="#">@destination.DiaDiem.TenDiaDiem</a></h3>
+                            <h3><a href="#">@destination.Tour.TenDiaDiem</a></h3>
                             <p class="location">
-                                <span class="ion-ios-map"></span> @destination.DiaDiem.DiaChi
+                                <span class="ion-ios-map"></span> @destination.Tour.DiaChi
                             </p>
                             <ul>
                                 <li><span class="flaticon-shower"></span>2</li>
