--- a/BanVeDiTourDuLich/Views/Home/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Index.cshtml
@@ -266,19 +266,19 @@
             </div>
         </div>
         <div class="row">
-            @foreach (var destination in @Model.CacDiaDiem)
+            @foreach (var tour in @Model.CacTour)
             {
                 <div class="col-md-4 ftco-animate">
                     <div class="project-wrap">
-                        <a href="#"
+                        <a href="/Tour/ChiTietChuyenDi/@tour.Tour.MaTour"
                            class="img"
-                           style="background-image: url(@destination.DiaDiem.DuongDanAnh)"></a>
+                           style="background-image: url(@tour.Tour.DiaDiemDen.DuongDanAnh)"></a>
                         <div class="text p-4">
-                            <span class="price">@destination.GiaTien/người</span>
+                            <span class="price">@tour.GiaTien/người</span>
                             <span class="days">Chuyến đi 1 ngày</span>
-                            <h3><a href="#">@destination.DiaDiem.TenDiaDiem</a></h3>
+                            <h3><a href="#">@tour.Tour.DiaDiemDi.TenDiaDiem - @tour.Tour.DiaDiemDen.TenDiaDiem</a></h3>
                             <p class="location">
-                                <span class="ion-ios-map"></span> @destination.DiaDiem.DiaChi
+                                <span class="ion-ios-map"></span> @tour.Tour.DiaDiemDen.DiaChi
                             </p>
                             <ul>
                                 <li><span class="flaticon-shower"></span>2</li>
