--- a/BanVeDiTourDuLich/Views/Tour/ChitietTourDiemDen.cshtml
+++ b/BanVeDiTourDuLich/Views/Tour/ChitietTourDiemDen.cshtml
@@ -47,7 +47,7 @@
                                                 </div>
                                             </div>
                                             <a href="/Tour/ChiTietChuyenDi/@destination.MaTour" title=" Huế - Đà Nẵng - Bà Nà - Hội An ( Khách sạn 4 sao)">
-                                            <img src="@destination.DuongDanAnh" class="img-responsive pic-lt" alt=" Huế - Đà Nẵng - Bà Nà - Hội An ( Khách sạn 4 sao)">
+                                                <img src="@destination.DuongDanAnh" class="img-responsive pic-lt" alt=" Huế - Đà Nẵng - Bà Nà - Hội An ( Khách sạn 4 sao)">
                                             </a>
                                         </div>
                                     </div>
@@ -85,7 +85,7 @@
                                                     <div class="clear"></div>
                                                 </div>
                                                 <div class="col-md-7 col-sm-7 col-xs-12 mg-bot10">
-                                                    <div class="f-left l"><img src="Content/ThemeHe/i-date.png" alt="date"></div>
+                                                    <div class="f-left l"><img src="/Content/ThemeHe/i-date.png" alt="date"></div>
                                                     <div class="f-left r">Ngày đi: <span class="font500">@destination.ThoiGianDi.</span></div>
                                                     <div class="clear"></div>
                                                 </div>
