--- a/BanVeDiTourDuLich/Views/Home/Destination.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Destination.cshtml
@@ -18,7 +18,7 @@
                 <div class="col-md-3 ftco-animate">
                     <div class="project-destination">
 
-                        <a href="/Home/Destination/@destination.DiaDiem.MaDiaDiem" class="img" style="background-image: url(@destination.DiaDiem.DuongDanAnh);">
+                        <a href="/Tour/ChiTietTourDiemDen/@destination.DiaDiem.MaDiaDiem" class="img" style="background-image: url(@destination.DiaDiem.DuongDanAnh);">
                             <div class="text">
                                 <h3>@destination.DiaDiem.TenDiaDiem</h3>
                                 <span>@destination.SoChuyen Chuyến đi</span>
@@ -107,15 +107,15 @@
             {
                 <div class="col-md-4 ftco-animate">
                     <div class="project-wrap">
-                        <a href="#"
+                        <a href="/Tour/ChiTietChuyenDi/@destination.Tour.MaTour"
                            class="img"
-                           style="background-image: url(@destination.Tour.DuongDanAnh)"></a>
+                           style="background-image: url(@destination.DiaDiem.DuongDanAnh)"></a>
                         <div class="text p-4">
                             <span class="price">@destination.GiaTien/người</span>
                             <span class="days">Chuyến đi 1 ngày</span>
-                            <h3><a href="#">@destination.Tour.TenDiaDiem</a></h3>
+                            <h3><a href="#">@destination.DiaDiem.TenDiaDiem</a></h3>
                             <p class="location">
-                                <span class="ion-ios-map"></span> @destination.Tour.DiaChi
+                                <span class="ion-ios-map"></span> @destination.DiaDiem.DiaChi
                             </p>
                             <ul>
                                 <li><span class="flaticon-shower"></span>2</li>
