--- a/BanVeDiTourDuLich/Views/Home/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Index.cshtml
@@ -243,7 +243,7 @@
             {
                 <div class="col-md-3 ftco-animate">
                     <div class="project-destination">
-                        <a href="/Home/Tour/@destination.DiaDiem.MaDiaDiem"
+                        <a href="/Tour/ChiTietTourDiemDen/@destination.DiaDiem.MaDiaDiem"
                            class="img"
                            style="background-image: url(@destination.DiaDiem.DuongDanAnh)">
                             <div class="text">
