--- a/BanVeDiTourDuLich/Content/css/Cart.css
+++ b/BanVeDiTourDuLich/Content/css/Cart.css
@@ -57,12 +57,12 @@ button,
     float: left;
 }
 
-    .price:before,
-    .subtotal:before,
-    .subtotal-value:before,
-    .total-value:before,
-    .promo-value:before {
-        content: '£';
+    .price:after,
+    .subtotal:after,
+    .subtotal-value:after,
+    .total-value:after,
+    .promo-value:after {
+        content: ' VNĐ';
     }
 
 .hide {
