--- a/BanVeDiTourDuLich/Views/Home/Index.cshtml
+++ b/BanVeDiTourDuLich/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using BanVeDiTourDuLich.Models
+﻿@using BanVeDiTourDuLich.Controllers
+@using BanVeDiTourDuLich.Models
 @using BanVeDiTourDuLich.ViewModels
 @model BanVeDiTourDuLich.ViewModels.IndexViewModel
 @{
@@ -274,7 +275,7 @@
                            class="img"
                            style="background-image: url(@tour.Tour.DiaDiemDen.DuongDanAnh)"></a>
                         <div class="text p-4">
-                            <span class="price">@tour.GiaTien/người</span>
+                            <span class="price">Từ @TourController.AddDotAndCommaToInteger(@tour.GiaTien) VNĐ/người</span>
                             <span class="days">Chuyến đi 1 ngày</span>
                             <h3><a href="#">@tour.Tour.DiaDiemDi.TenDiaDiem - @tour.Tour.DiaDiemDen.TenDiaDiem</a></h3>
                             <p class="location">
