--- a/BanVeDiTourDuLich/Views/Tour/ChiTietChuyenDi.cshtml
+++ b/BanVeDiTourDuLich/Views/Tour/ChiTietChuyenDi.cshtml
@@ -11,7 +11,10 @@
         <div style="align-items: center;" class="row justify-content-center pb-4 detail-destination">
             <div class="col-md-4 ftco-animate image-box">
                 <div class="project-wrap">
-                    <a href="#" class="img" style="background-image: url(@Model.Tour.DiaDiemDen.DuongDanAnh); border-radius: 6px;"></a>
+                    <a href="#" class="img" style="        background-image: url( @Model.Tour.DiaDiemDen.DuongDanAnh );
+        border-radius: 6px;
+        background-position: center;
+"></a>
                 </div>
             </div>
             <div class="motachitiet" style="flex: 0.8; font-weight: 600">
