--- a/BanVeDiTourDuLich/Views/Shared/_Layout.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_Layout.cshtml
@@ -170,6 +170,8 @@
             bottom: -1rem;
             left: 0.5rem;
             font-size: 0.7rem;
+            display: inline-block;
+            width: max-content;
         }
 
             
@@ -410,43 +412,46 @@
 
 @RenderSection("scripts", required: false)
 <script>
+
     var chat = $.connection.chat;
     $.connection.hub.start().done(function () {
         var clientId = $('.MaTaiKhoan')[0].value;
         chat.server.addConnectionId(clientId , chat.connection.id);
     });
 
-    AddNewMessageToDbAndManager = function(msg , managerId , userId)
-    {
-        chat.server.saveNewMessageFromKhachHangToNhanVien(managerId, userId, msg);
-        chat.server.sendMassageFromClientToAllManager(userId, msg);
-    }
-
-    chat.client.addNewMessageToManagerBrower = function(maKhachHang,msg) {
+    chat.client.addNewMessageToManager = function(maKhachHang,msg,timeSent) {
         if (msg !== '') {
-            var text = `<div class='msg-img current'>
-           <img class='current-user-img' src='/Content/images/Persions/ADMIN.jpg' />
-           <p class='txt-msg'>${msg}</p>
+            var text = `<div class='msg-img end-user'>
+           <img class='current-user-img' src='/Content/images/Persions/${maKhachHang}.jpg' />
+           <p class='txt-msg'>${msg}<span class="time-sent">Đã gửi vào ${timeSent}</span></p>
            </div>`;
             $(".msg").children().last().after(text);
-    }
         }
+    }
+
+    chat.client.addNewMessageCurrentClientBrower = function (msg, timeSent) {
+        if (msg !== '') {
+            var clientId = $('.MaTaiKhoan')[0].value;
+            var text = `<div class='msg-img current'>
+           <img class='current-user-img' src='/Content/images/Persions/${clientId}.jpg' />
+           <p class='txt-msg'>${msg}<span class="time-sent">Đã gửi vào ${timeSent}</span></p>
+           </div>`;
+            $(".msg").children().last().after(text);
+        }
+    }
 
     $($('.send__button')[0]).click(function() {
-        var msgDetail = $('.msg-input')[0].value;
-        if (msgDetail !== '') {
-            var text = `<div class='msg-img current'>
-           <img class='current-user-img' src='/Content/images/Persions/ADMIN.jpg' />
-           <p class='txt-msg'>${msgDetail}</p>
-           </div>`;
-            $(".msg").children().last().after(text);
+            var msgDetail = $('.msg-input')[0].value;
             var msg = $('.msg')[0];
-            var clientId = $('.MaTaiKhoan')[0].value;
-            AddNewMessageToDbAndManager(msgDetail, 'NHANVIEN01', clientId);
-            msg.scrollTop = msg.scrollHeight;
-            $('.msg-input')[0].value = '';
+            if (msgDetail !== '') {
+                var clientId = $('.MaTaiKhoan')[0].value;
+                chat.server.saveNewMessageFromKhachHang(clientId, msgDetail);
+                chat.server.sendMassageFromClientToAllManager(clientId, msgDetail);
+                chat.server.sendMassageFromDbToCurrentBrower(clientId);
+                msg.scrollTop = msg.scrollHeight;
+                $('.msg-input')[0].value = '';
+            }
         }
-    }
     )
     function closeChat() {
         var box = $('.msgbox')[0];
