--- a/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
@@ -347,7 +347,7 @@
     chat.client.addMessageInformationInCard = function (clientId, msg , timeSent ) {
         var html = `<li>
                         <a href="#">
-                            <img class="contacts-list-img" src="/Content/images/Persions/${clientId}" alt="User Avatar">
+                            <img class="contacts-list-img" src="/Content/images/Persions/${clientId}.jpg" alt="User Avatar">
                             <div class="contacts-list-info">
                                 <span class="contacts-list-name">
                                     ${clientId}
